force-app/main/default/objects/Product2/fields/SBQQ__SubscriptionConversion__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__SubscriptionConversion__c</fullName>
    <description>Indicates how this Product is converted to Subscriptions</description>
    <inlineHelpText>Indicates how this Product is converted to Subscriptions</inlineHelpText>
    <label>Subscription Conversion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One per subscribed asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>