force-app/main/default/objects/Product2/fields/Shipping_Weight_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Weight_Per_Unit__c</fullName>
    <description>Captures the shipping weight of a single unit of the product in lbs.</description>
    <inlineHelpText>Indicates the shipping weight of a single unit of the product in lbs.</inlineHelpText>
    <label>Shipping Weight Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>