force-app/main/default/objects/Product2/fields/Show_on_Web__c.field-meta.xml
<CustomField>
    <fullName>Show_on_Web__c</fullName>
    <description>Captures whether a product is available on the web or not. Integral for e-commerce integration.</description>
    <inlineHelpText>Indicates whether a product is available on the web or not.</inlineHelpText>
    <label>Show on Web</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>