force-app/main/default/objects/Product2/fields/SkillsPass_Key__c.field-meta.xml
<CustomField>
    <fullName>SkillsPass_Key__c</fullName>
    <description>Holds the applicable skillspass key indicating what the course is</description>
    <label>SkillsPass Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>