force-app/main/default/objects/Product2/fields/Standard_Price__c.field-meta.xml
<CustomField>
    <fullName>Standard_Price__c</fullName>
    <description>Captures the standard price displayed on the course.</description>
    <inlineHelpText>Indicates the standard price displayed on the course.</inlineHelpText>
    <label>Standard Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>