force-app/main/default/objects/Product2/fields/Subscription_or_Asset__c.field-meta.xml
<CustomField>
    <fullName>Subscription_or_Asset__c</fullName>
    <description>Captures whether Product is considered a subscription or asset by Intelerad. Does not affect Quote-to-Cash setup.</description>
    <inlineHelpText>Indicates whether Product is considered a subscription or asset by Intelerad. Does not affect Quote-to-Cash setup.</inlineHelpText>
    <label>Subscription or Asset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>