force-app/main/default/objects/Product2/fields/Theory_Product__c.field-meta.xml
<CustomField>
    <fullName>Theory_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Theory Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Theory Product)</relationshipLabel>
    <relationshipName>Theory_Product</relationshipName>
    <type>Lookup</type>
</CustomField>