force-app/main/default/objects/Product2/fields/Wall_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Wall_Certificate__c</fullName>
    <description>Captures whether a course product provides a wall certificate to attendees who meet all requirements.</description>
    <inlineHelpText>Indicates whether a course product provides a wall certificate to attendees who meet all requirements.</inlineHelpText>
    <label>Wall Certificate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>