force-app/main/default/objects/Product2/validationRules/Active_Status_of_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Status_of_Product</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(IsActive),
  $Profile.Name != &apos;OSG Sys Admin&apos;
)</errorConditionFormula>
    <errorMessage>You do not have permission to adjust active status on product! Contact your administrator.</errorMessage>
</ValidationRule>