force-app/main/default/objects/Product2/validationRules/Ensure_Eval_Data_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_Eval_Data_Populated</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( IsActive ),
IsActive = true,
ISPICKVAL(Family, &quot;Evaluations&quot;),
OR(
ISPICKVAL( Evaluation_Record_Type__c, &quot;&quot;),
ISBLANK( Devices__c)
)
)</errorConditionFormula>
    <errorMessage>Evaluation Record Type and Devices are required for an evaluation product!</errorMessage>
</ValidationRule>