force-app/main/default/objects/Product2/validationRules/New_Product_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Product_Creation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
$Profile.Name != &apos;OSG Sys Admin&apos;
)</errorConditionFormula>
    <errorMessage>Contact your administrator for new products!</errorMessage>
</ValidationRule>