force-app/main/default/objects/Product2/validationRules/Recurring_Invoice_Requirements.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_Invoice_Requirements</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
 ISCHANGED( Recurring_Invoice_Frequency__c  ),
 Recurring_Invoice__c = true,
 ISBLANK(TEXT(Recurring_Invoice_Frequency__c) )
),
AND(
 ISCHANGED( Recurring_Invoice__c ),
 Recurring_Invoice__c = true,
 ISBLANK(TEXT(Recurring_Invoice_Frequency__c) )
),
AND(
 ISCHANGED( Recurring_Invoice__c ),
 Recurring_Invoice__c = false,
 NOT(ISBLANK(TEXT(Recurring_Invoice_Frequency__c) ))
),
AND(
 ISCHANGED( Recurring_Invoice_Frequency__c ),
 Recurring_Invoice__c = false,
 NOT(ISBLANK(TEXT(Recurring_Invoice_Frequency__c) ))
)
)</errorConditionFormula>
    <errorMessage>Recurring invoices require a valid frequency to be set!</errorMessage>
</ValidationRule>