force-app/main/default/objects/Product2/validationRules/Required_Pricing_and_Commission_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Pricing_and_Commission_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( IsActive ),
IsActive = true,
OR(
ISBLANK( Standard_Price__c ),
ISBLANK( Base_Cost__c ),
ISBLANK( Commission_Rate__c ),
ISBLANK( Commission_Offset__c )
)
)</errorConditionFormula>
    <errorMessage>Ensure all pricing and commission fields are set! (Commission Rate, Commission Offset, Standard Price and Base Cost)</errorMessage>
</ValidationRule>