force-app/main/default/objects/Product2/listViews/Active_Consulting_Products.listView-meta.xml
<ListView>
    <fullName>Active_Consulting_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>External_Product_Name__c</columns>
    <columns>Standard_Price__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Delivery_Method__c</columns>
    <columns>Course_Product_Line__c</columns>
    <columns>SBQQ__PriceEditable__c</columns>
    <columns>Pay_Commission__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Consulting Services</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Consulting Products</label>
</ListView>