force-app/main/default/objects/Product2/listViews/Active_Evaluation_Products.listView-meta.xml
<ListView>
    <fullName>Active_Evaluation_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Standard_Price__c</columns>
    <columns>Delivery_Method__c</columns>
    <columns>Theory_Product__c</columns>
    <columns>Devices__c</columns>
    <columns>Evaluation_Record_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Evaluations</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Evaluation Products</label>
</ListView>