force-app/main/default/objects/Product2/listViews/Active_Membership_Products.listView-meta.xml
<ListView>
    <fullName>Active_Membership_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>External_Product_Name__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>Delivery_Method__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Delivery_Method__c</field>
        <operation>equals</operation>
        <value>Online</value>
    </filters>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Memberships</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Membership Products</label>
</ListView>