force-app/main/default/objects/Product2/listViews/Active_Onsite_Products.listView-meta.xml
<ListView>
    <fullName>Active_Onsite_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>External_Product_Name__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Delivery_Method__c</columns>
    <columns>Course_Product_Line__c</columns>
    <columns>MaxOSCapacity_AdditionalChargeThreshold__c</columns>
    <columns>Extra_Seat_Price__c</columns>
    <columns>Maximum_Capacity__c</columns>
    <columns>Maximum_Capacity_Maximum_Attendees__c</columns>
    <columns>Standard_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Courses</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Delivery_Method__c</field>
        <operation>equals</operation>
        <value>On-site</value>
    </filters>
    <label>Active Onsite Products</label>
</ListView>