force-app/main/default/objects/Product2/listViews/Active_Physical_Good_Products.listView-meta.xml
<ListView>
    <fullName>Active_Physical_Good_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>External_Product_Name__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Standard_Price__c</columns>
    <columns>Base_Cost__c</columns>
    <columns>Amazon_Sku__c</columns>
    <columns>ShipStation_Sku__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Physical Goods</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Physical Good Products</label>
</ListView>