force-app/main/default/objects/Product2/listViews/All_Active_Products.listView-meta.xml
<ListView>
    <fullName>All_Active_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>External_Product_Name__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Standard_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>notEqual</operation>
        <value>Expenses and Fees</value>
    </filters>
    <label>All Active Products</label>
</ListView>