force-app/main/default/objects/Product2/listViews/All_Membership_Products.listView-meta.xml
<ListView>
    <fullName>All_Membership_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>External_Product_Name__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Delivery_Method__c</columns>
    <columns>SBQQ__SubscriptionType__c</columns>
    <columns>Standard_Price__c</columns>
    <columns>SBQQ__PriceEditable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Memberships</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Membership Products</label>
</ListView>